New changes on Facturation
